Fixed the image that was not cropped completely. Finished with media queries and happy with the mobile results :). Also a added a hr for the start of footer for styling purposes

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,14 +102,13 @@ footer {
   display: block;
 }
 
-@media (min-width: 375px) {
+hr {
+  background-color: #fff;
+}
+
+@media (max-width: 575px) {
   .menu h2 {
     padding-top: 15px;
-  }
-
-  .menu img {
-    display: inline-flex;
-    align-self: center;
   }
 
   section.about h2 {
@@ -124,5 +123,9 @@ footer {
     display: flex;
     align-self: center;
     font-size: 25px;
+  }
+
+  .about p {
+    font-size: 18px;
   }
 }
